[package]
name = "tcb"
version = "0.1.20"
authors = ["Carlos Pereira <carloscdap@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["causal-order", "causal-delivery", "causal-stability"]
categories = ["concurrency"]
description = "A middleware service for delivering messages in a causal order."
repository = "https://github.com/carlospereira1607/tcb"
homepage = "https://github.com/carlospereira1607/tcb"

[dependencies]
crossbeam = "0.7"
serde_derive = "1.0"
bincode = "1.2.1"
serde = "1.0.110"
smallvec = "1.4.0"
bit-vec = "0.6.2"
petgraph = "0.5.1"
toml = "0.5.6"
